Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101399

QTest::toString() doesn't compile for certain QFlags<T> with QT_TYPESAFE_FLAGS

    XMLWordPrintable

Details

    • 3
    • ea3a7aaf2b (qt/qtbase/dev) ea3a7aaf2b (qt/tqtc-qtbase/dev) e93bf391fa (qt/qtbase/dev) b72d7931f1 (qt/qtbase/6.3) b72d7931f1 (qt/tqtc-qtbase/6.3) e93bf391fa (qt/tqtc-qtbase/dev) b72d7931f1 (qt/tqtc-qtbase/6.3.0)
    • Team Two Foundation Sprint 52, Team B Foundation Sprint 53

    Description

      The QTest::toString() specialisations for QFlags assume explicit conversion to int and unsigned int are both possible. But with QT_TYPESAFE_FLAGS, QFlags only converts to QFlags::Int, which is either unsigned or int. It doesn't convert to the resp. other.
       

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              mmutz Marc Mutz
              mmutz Marc Mutz
              Vladimir Minenko Vladimir Minenko
              Alex Blasche Alex Blasche
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes